--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="/favicon-dark.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Loops | Reflect</title>
+    <title>Loop | Reflect</title>
   </head>
   <body>
     <div id="root"></div>
